Mojo: Reject writes when ChannelWin IO fails

This is marginally better than what we're doing now, but more
importantly it satisfies a reasonable DCHECK that we currently
violate in these cases.

Bug: 829290
Change-Id: I68621d4f1c8f40c1b689d74e801c1cdb77e4663a
Reviewed-on: https://chromium-review.googlesource.com/997769
Reviewed-by: Wez <wez@chromium.org>
Commit-Queue: Ken Rockot <rockot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548463}
Former-commit-id: baede72cc46477cfd8fec5917b96e3f055217979